[gd_scene load_steps=4 format=3 uid="uid://db5h6t8uxn2pp"]

[ext_resource type="Script" uid="uid://hhfcbacrhnme" path="res://Scripts/UI/game_ui.gd" id="1_3fiko"]
[ext_resource type="PackedScene" uid="uid://d0odbtpf5d5ev" path="res://Scenes/UI/Components/inventory_item.tscn" id="2_5b8pf"]
[ext_resource type="PackedScene" uid="uid://ce7ypripko0uo" path="res://Scenes/UI/Components/button.tscn" id="4_6w80a"]

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fiko")
inventory_item_scene = ExtResource("2_5b8pf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
grow_horizontal = 2
grow_vertical = 0

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
layout_mode = 2
current_tab = 0

[node name="Mapas" type="GridContainer" parent="PanelContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 6
metadata/_tab_index = 0

[node name="Importar mapa" parent="PanelContainer/TabContainer/Mapas" instance=ExtResource("4_6w80a")]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "  +  "

[node name="Tokens" type="GridContainer" parent="PanelContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 6
metadata/_tab_index = 1

[node name="Importar token" parent="PanelContainer/TabContainer/Tokens" instance=ExtResource("4_6w80a")]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "  +  "

[node name="Criaturas" type="GridContainer" parent="PanelContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 6
metadata/_tab_index = 2

[node name="Importar criatura" parent="PanelContainer/TabContainer/Criaturas" instance=ExtResource("4_6w80a")]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "  +  "

[node name="Misc" type="GridContainer" parent="PanelContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 6
metadata/_tab_index = 3

[node name="Importar misc" parent="PanelContainer/TabContainer/Misc" instance=ExtResource("4_6w80a")]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "  +  "

[node name="FileSelector" type="NativeFileDialog" parent="."]
title = "Open a File"
file_mode = 0
filters = PackedStringArray("*.png, *.jpg, *.jpeg ; Imagens")
unique_name_in_owner = true

[connection signal="pressed" from="PanelContainer/TabContainer/Mapas/Importar mapa" to="." method="_on_importar_mapa_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Tokens/Importar token" to="." method="_on_importar_token_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Criaturas/Importar criatura" to="." method="_on_importar_criatura_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Misc/Importar misc" to="." method="_on_importar_misc_pressed"]
